Have Dungeon Header written

--- a/viewDA/viewDungeon/index.html
+++ b/viewDA/viewDungeon/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/DungeonAdventure.jpg" />
+    <link rel="icon" type="image/jpg" href="/DungeonAdventure" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dungeon Adventure Game</title>
   </head>
